Redesigned WACS/DSC authorization mechanics

--- a/.env.example
+++ b/.env.example
@@ -45,3 +45,8 @@ SENTRY_DSN="https://example@example.ingest.sentry.io/example"
 SENTRY_DSN_JS="js_dsn_key"
 
 LOG_ROCKET="project_name"
+
+WACS_CLIENT_ID="application_client_id_from_wacs"
+WACS_CLIENT_SECRET="application_client_secret_from_wacs"
+DCS_CLIENT_ID="application_client_id_from_dcs"
+DCS_CLIENT_SECRET="application_client_secret_from_dcs"
