--- a/.env.example
+++ b/.env.example
@@ -32,8 +32,8 @@ RABBITMQ_HOST="rabbitmq"
 RABBITMQ_PORT=5672
 RABBITMQ_USER="user"
 RABBITMQ_PASS="password"
-RABBITMQ_QUEUE="mailer"
-RABBITMQ_ROUTING="mailer"
+RABBITMQ_QUEUE="queue"
+RABBITMQ_ROUTING="routing"
 
 MAIN_HOST="localhost"
 SOCKET_PORT=8001
