add docker ignore for vendored deps, and unbreak php

--- a/compose.local.yml
+++ b/compose.local.yml
@@ -17,7 +17,7 @@ services:
       watch:
         - action: sync
           path: ./php/htdocs/webapp/www
-          target: /var/www/html/webapp/www
+          target: /usr/share/nginx/html
           ignore:
             - vendor/
         - action: rebuild
