--- a/node/Dockerfile
+++ b/node/Dockerfile
@@ -11,8 +11,6 @@ COPY ./yarn.lock .
 RUN yarn install
 COPY ./node_entrypoint.sh /node_entrypoint.sh
 RUN chmod +x /node_entrypoint.sh
+COPY ./scripts /scripts
 COPY . .
 ENTRYPOINT [ "/node_entrypoint.sh" ]
-
-# COPY ./node_start.sh /node_start.sh
-# ENTRYPOINT ["/node_start.sh"]
