--- a/php/htdocs/webapp/www/composer.json
+++ b/php/htdocs/webapp/www/composer.json
@@ -1,7 +1,7 @@
 {
   "name": "nova-framework/framework",
   "type": "project",
-  "description": "Framework for PHP 5.6+",
+  "description": "Framework for PHP 8",
   "homepage": "https://github.com/nova-framework/framework",
   "license": "MIT",
   "authors": [
@@ -13,28 +13,28 @@
     }
   ],
   "require": {
-    "php": "~7.2",
-    "symfony/console": "~3.4",
-    "symfony/finder": "~3.4",
-    "symfony/http-foundation": "~3.4",
-    "symfony/http-kernel": "~3.4",
-    "symfony/routing": "~3.4",
-    "symfony/yaml": "v4.4.37",
-    "stack/builder": "~1.0",
-    "doctrine/inflector": "~1.0.1.0",
-    "phpmailer/phpmailer": "~5.2",
-    "patchwork/utf8": "~1.2",
-    "nesbot/carbon": "~2.58.0",
-    "swiftmailer/swiftmailer": "~5.4",
-    "twbs/bootstrap": "~3.3",
-    "monolog/monolog": "~1.19",
-    "predis/predis": "~0.8.7.0",
-    "tecnickcom/tcpdf": "~6.2.12",
-    "php-http/guzzle6-adapter": "~2.0",
-    "sentry/sdk": "~3.0.0",
-    "filp/whoops": "~2.5",
-    "myclabs/php-enum": "~1.7.4",
-    "vlucas/phpdotenv": "~5.4.1",
+    "php": "~8.3",
+    "symfony/console": "~7.1",
+    "symfony/finder": "~7.1",
+    "symfony/http-foundation": "~7.1",
+    "symfony/http-kernel": "~7.1",
+    "symfony/routing": "~7.1",
+    "symfony/yaml": "~7.1",
+    "symfony/mime": "~7.1",
+    "doctrine/inflector": "~2.0",
+    "phpmailer/phpmailer": "~6.9",
+    "patchwork/utf8": "~1.3",
+    "nesbot/carbon": "~3.7.0",
+    "swiftmailer/swiftmailer": "~6.2",
+    "twbs/bootstrap": "~5.3",
+    "monolog/monolog": "~3.7",
+    "predis/predis": "~2.2",
+    "tecnickcom/tcpdf": "~6.7",
+    "guzzlehttp/guzzle": "~7.9",
+    "sentry/sdk": "~4.0.0",
+    "filp/whoops": "~2.15",
+    "myclabs/php-enum": "~1.8",
+    "vlucas/phpdotenv": "~5.6",
     "php-amqplib/php-amqplib": ">=3.0",
     "ext-curl": "*",
     "ext-sockets": "*",
