adjust docker set up

--- a/.env.deploy
+++ b/.env.deploy
@@ -1,3 +1,4 @@
+# todo: go populate these (random user + pass on those) and investigate ones you don't know. 
 DEPLOY_ENV=op://DevOps/vmast-on-prem/$DEPLOY_ENV/DEPLOY_ENV
 APP_URL=op://DevOps/vmast-on-prem/$DEPLOY_ENV/APP_URL
 APP_EMAIL=op://DevOps/vmast-on-prem/$DEPLOY_ENV/APP_EMAIL
