--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -1,37 +1,77 @@
 name: Docker
 
-on: [workflow_dispatch]
+on: [workflow_dispatch, push]
 
 jobs:
-  #test building jar and images for PR without push
-
-  #build and push web and pipeline images
-  push:
+  build-php-image:
     runs-on: ubuntu-20.04
-
     steps:
       - uses: actions/checkout@v4
-      - name: Build web image
-        shell: bash
-        run: docker build -t bibletranslationtools/vmast-web:$GITHUB_SHA -t bibletranslationtools/vmast-web:$GITHUB_REF_NAME -t bibletranslationtools/vmast-web:latest .
-
-      - name: Build vmast php image
-        shell: bash
-        run: docker build -t bibletranslationtools/vmast-php:$GITHUB_SHA -t bibletranslationtools/vmast-php:$GITHUB_REF_NAME -t bibletranslationtools/vmast-php:latest ./php
-
+      - uses: FranzDiebold/github-env-vars-action@v2
+      - uses: docker/setup-qemu-action@v2
+      - uses: docker/setup-buildx-action@v2
+      - name: Build vmast php images
+        uses: docker/build-push-action@v3
+        with:
+          context: ./php
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
+  build-node-image:
+    runs-on: ubuntu-20.04
+    steps:
+      - uses: actions/checkout@v4
+      - uses: FranzDiebold/github-env-vars-action@v2
+      - uses: docker/setup-qemu-action@v2
+      - uses: docker/setup-buildx-action@v2
       - name: Build vmast node image
-        shell: bash
-        run: docker build -t bibletranslationtools/vmast-node:$GITHUB_SHA -t bibletranslationtools/vmast-node:$GITHUB_REF_NAME -t bibletranslationtools/vmast-node:latest ./node
+        uses: docker/build-push-action@v3
+        with:
+          context: ./node
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
 
-      - name: Log into registry
-        shell: bash
-        env:
-          DOCKER_PASSWORD: ${{ secrets.DOCKER_HUB_TOKEN }}
-          DOCKER_USERNAME: ${{ secrets.DOCKER_HUB_USER }}
-        run: echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
-
-      - name: Push image
+  push-images:
+    runs-on: ubuntu-20.04
+    needs: [build-php-image, build-node-image]
+    name: Push images
+    steps:
+      - uses: actions/checkout@v4
+      - uses: docker/setup-qemu-action@v2
+      - uses: docker/setup-buildx-action@v2
+      - name: Login to DockerHub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+      - name: Set vmast php docker tags
         run: |
-          docker push -a bibletranslationtools/vmast-web
-          docker push -a bibletranslationtools/fetcher-php
-          docker push -a bibletranslationtools/fetcher-node
+          echo "VMAST_PHP_TAG_SHA=wycliffeassociates/vmast-php:$GITHUB_SHA" >> $GITHUB_ENV && \
+          echo "VMAST_PHP_TAG_BRANCH=wycliffeassociates/vmast-php:$CI_REF_NAME_SLUG" >> $GITHUB_ENV && \
+          echo "VMAST_PHP_TAG_LATEST=wycliffeassociates/vmast-php:latest" >> $GITHUB_ENV
+      - name: Set vmast node docker tags
+        run: |
+          echo "VMAST_NODE_TAG_SHA=wycliffeassociates/vmast-node:$GITHUB_SHA" >> $GITHUB_ENV && \
+          echo "VMAST_NODE_TAG_BRANCH=wycliffeassociates/vmast-node:$CI_REF_NAME_SLUG" >> $GITHUB_ENV && \
+          echo "VMAST_NODE_TAG_LATEST=wycliffeassociates/vmast-node:latest" >> $GITHUB_ENV
+      - name: Build and push vmast php image
+        uses: docker/build-push-action@v3
+        with:
+          context: .
+          push: true
+          tags: |
+            ${{ env.VMAST_PHP_TAG_SHA }}
+            ${{ env.VMAST_PHP_TAG_BRANCH }}
+            ${{ env.VMAST_PHP_TAG_LATEST }}
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
+      - name: Build and push vmast node image
+        uses: docker/build-push-action@v3
+        with:
+          context: .
+          push: true
+          tags: |
+            ${{ env.VMAST_NODE_TAG_SHA}}
+            ${{ env.VMAST_NODE_TAG_BRANCH}}
+            ${{ env.VMAST_NODE_TAG_LATEST}}
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
