adjust docker set up

--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -1,7 +1,6 @@
-name: Docker
+name: Build + Push Docker Images
 
 on: [workflow_dispatch, push]
-
 jobs:
   build-php-image:
     runs-on: ubuntu-20.04
