--- a/compose.local.yml
+++ b/compose.local.yml
@@ -10,7 +10,7 @@ services:
         - action: rebuild
           path: ./php/htdocs/webapp/www/composer.json
     volumes:
-      - ./db/dump:/db_dump
+      - ./db_dump.sql.gz:/db_dump
 
   php:
     develop:
@@ -65,9 +65,6 @@ services:
   #   MAIL_FROM: ${MAIL_FROM}
   #   MAIL_USER: ${MAIL_USER}
   #   MAIL_PASS: ${MAIL_PASS}
-  #   SSL_CRT: ${SSL_CRT}
-  #   SSL_KEY: ${SSL_KEY}
-  #   SSL_CA: ${SSL_CA}
   #   REDIS_HOST: ${REDIS_HOST}
   #   REDIS_PORT: ${REDIS_PORT}
   #   REDIS_DB: ${REDIS_DB}
